--- a/Happy-Hour/src/main/resources/templates/fragments.html
+++ b/Happy-Hour/src/main/resources/templates/fragments.html
@@ -10,5 +10,6 @@
     <link th:href="@{/css/happyhour.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
 </head>
+<table class=""
 </body>
 </html>
