--- a/Happy-Hour/src/main/resources/templates/owner-registration.html
+++ b/Happy-Hour/src/main/resources/templates/owner-registration.html
@@ -3,10 +3,19 @@
 <head th:replace="fragments :: head">
 </head>
 <title th:text="${title}"></title>
-<body >
-<div class="bg">
+
+<body class="container bg" style="font-family: Comic Sans MS, Comic Sans, cursive; font-weight: bold; color: white;">
+
+    <div class="page-header text-center my-5">    <!--This header should be fragmented-->
+        <h1>Happy Hour Locator</h1>
+    </div>
+    <div class="navbar-header d-flex justify-content-flex-start text-center mb-4">  <!--This nav bar should be fragmented-->
+        <a th:href="@{/}" class="navbar-brand m-0 px-1 border">Home</a>
+        <p th:text="${title}" class="navbar-brand m-0 w-100 border"></p>
+    </div>
+
     <div class="container h-100">
-        <div class="d-flex justify-content-center h-100">
+        <div class="d-flex justify-content-center">
             <div class="row h-100 justify-content-center align-items-center">
                 <form method="post">
                     <div class="form-group">
@@ -32,7 +41,7 @@
             </div>
         </div>
     </div>
-</div>
+<!--</div> -->
 </body>
 
 </html>
