coded owner home landing page with form and table

--- a/Happy-Hour/src/main/resources/templates/owner-login.html
+++ b/Happy-Hour/src/main/resources/templates/owner-login.html
@@ -19,7 +19,7 @@
     <div class="row d-flex justify-content-center">
         <form method="post">
             <div class="form-group">
-                <label>Username
+                <label>Username</label>
                     <input class="form-control" name ="username" id="username"> <!--id="username" placeholder for th:field=owner class field later-->
                 </label>
 
