--- a/Happy-Hour/src/main/resources/templates/index.html
+++ b/Happy-Hour/src/main/resources/templates/index.html
@@ -5,16 +5,43 @@
 <title th:text="${title}"></title>
 <body >
 <div class="bg">
-    <div class="container h-100">
-        <div class="d-flex justify-content-center h-100">
+    <div class="container h-100" >
+        <div class="d-flex justify-content-end" >
+            <a th:href="@{'/owner-login'}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Login</a>
+        </div>
+        <div class="d-flex justify-content-center" style="height:45%">
             <div class="searchbar">
-                <input class="search_input" type="text" name="" placeholder="Hello World">
-                <a href="#" class="search_icon"><i class="fas fa-search"></i></a>
+                <form th:action="@{results}" method="post">
+                <input class="search_input" type="text" name="searchTerm" placeholder="Hello World">
+                <button class="search_icon" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                </form>
             </div>
+        </div>
+        <div class="d-flex justify-content-center h-auto">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th> Hot Happy Hours</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <th:block th:each="happy : ${happyHours}">
+                        <tr>
+                            <td>
+                                <a th:href="@{'/user-view/'+${happy.key}}" th:text="${happy.value}" class="btn btn-secondary " role="button" ></a>
+                            </td>
+                        </tr>
+                    </th:block>
+                </tbody>
+            </table>
+        </div>
+        <div class="d-flex justify-content-center">
+
+                <a th:href="@{'/owner-registration'}" th:text="'Want to add your Happy Hour?'" class="btn btn-primary " role="button"></a>
+
         </div>
     </div>
 </div>
 </body>
-
 </html>
 
