added path to owner-registration page

--- a/Happy-Hour/src/main/resources/templates/owner-login.html
+++ b/Happy-Hour/src/main/resources/templates/owner-login.html
@@ -35,7 +35,7 @@
         </form>
     </div>
 
-    <p class="row d-flex justify-content-center my-2">Don't have an account?<a href="" class="ml-1">Register for one.</a></p>  <!--href="" placeholder for registration page-->
+    <p class="row d-flex justify-content-center my-2">Don't have an account?<a th:href="@{'/owner-registration'}" class="ml-1">Register for one.</a></p>
 
 </body>
 </html>
