--- a/Happy-Hour/src/main/resources/templates/owner-registration.html
+++ b/Happy-Hour/src/main/resources/templates/owner-registration.html
@@ -20,19 +20,19 @@
                 <form method="post">
                     <div class="form-group">
                         <label>Username
-                            <input class="form-control" name="username" id="username"/>
+                            <input class="form-control" th:field="${registerFormDTO.username}"/>
                         </label>
+                        <p class="error" th:errors="${registerFormDTO.username}"></p>
                     </div>
-
                     <div class="form-group">
                         <label>Password
-                            <input class="form-control" name="password" id="password" type="password"/>
+                            <input class="form-control" th:field="${registerFormDTO.password}" type="password"/>
                         </label>
+                        <p class="error" th:errors="${registerFormDTO.password}"></p>
                     </div>
-
                     <div class="form-group">
                         <label>Verify Password
-                            <input class="form-control" name="verifyPassword" id="verifyPassword" type="password"/>
+                            <input class="form-control" th:field="${registerFormDTO.verifyPassword}" type="password"/>
                         </label>
                     </div>
 
