--- a/Happy-Hour/src/main/resources/templates/owner-home.html
+++ b/Happy-Hour/src/main/resources/templates/owner-home.html
@@ -17,42 +17,37 @@
 <form method="post">
     <label>CREATE NEW HAPPY HOUR</label>
     <div class="form-group">
-        <label>Business Name</label>
-            <input type="text" class="form-control" name="name" id="name" placeholder="Business Name Here">
+        <label>Happy Hour Name
+            <input th:field="${happyHour.name}" class="form-control">
+        </label>
+        <p class="error" th:errors="${happyHour.name}"></p>
     </div>
     <div class="form-group">
-        <label>Business Address</label>
-        <input type="text" class="form-control" name="address" id="address" placeholder="Street Name & Number">
+        <label>Happy Hour Day of Week
+            <input th:field="${happyHour.dayOfWeek}" class="form-control" placeholder="Monday">
+        </label>
+        <p class="error" th:errors="${happyHour.dayOfWeek}"></p>
     </div>
     <div class="form-group">
-        <label>City</label>
-        <input type="text" class="form-control" name="city" id="city" placeholder="Kansas City">
+        <label>Happy Hour Address
+            <input th:field="${happyHour.address}" class="form-control" placeholer="123 S. Mulberry St., Kansas City,  MO">
+        </label>
+        <p class="error" th:errors="${happyHour.address}"></p>
     </div>
     <div class="form-group">
-        <label>State & Zip Code</label>
-        <input type="text" class="form-control" name="state" id="state" placeholder="Missouri">
-        <input type="text" class="form-control" name="zip" id="zip" placeholder="64105">
+        <label>Happy Hour Start Time
+            <input th:field="${happyHour.startTime}" class="form-control" placeholder="6">
+        </label>
+        <p class="error" th:errors="${happyHour.startTime}"></p>
     </div>
     <div class="form-group">
-        <label>Happy Hour Start Time</label>
-        <input type="text" class="form-control" name="hh-start" id="hh-start" placeholder="04:30 PM">
-    </div>
-    <div class="form-group">
-        <label>Happy Hour End Time</label>
-        <input type="text" class="form-control" name="ehh-end" id="hh-end" placeholder="06:30 PM">
-    </div>
-    <div class="form-group">
-        <label>Happy Hour Days of Week</label><br>
-        <input type="checkbox" id="monday" name="monday" value="monday"><label for="monday">Monday</label>
-        <input type="checkbox" id="tuesday" name="tuesday" value="tuesday"><label for="tuesday">Tuesday</label>
-        <input type="checkbox" id="wednesday" name="wednesday" value="wednesday"><label for="wednesday">Wednesday</label>
-        <input type="checkbox" id="thursday" name="thursday" value="thursday"><label for="thursday">Thursday</label><br>
-        <input type="checkbox" id="friday" name="friday" value="friday"><label for="friday">Friday</label>
-        <input type="checkbox" id="saturday" name="saturday" value="saturday"><label for="saturday">Saturday</label>
-        <input type="checkbox" id="sunday" name="sunday" value="sunday"><label for="sunday">Sunday</label>
+        <label>Happy Hour End Time
+            <input th:field="${happyHour.endTime}" class="form-control" placeholder="8">
+        </label>
+        <p class="error" th:errors="${happyHour.endTime}"></p>
     </div>
     <div class="col text-center">
-        <button class="btn btn-primary">Submit</button>
+        <input type="submit" value="Create" class="btn btn-primary">
     </div>
 </form>
         </div>
