--- a/Happy-Hour/src/main/resources/templates/owner-home.html
+++ b/Happy-Hour/src/main/resources/templates/owner-home.html
@@ -10,7 +10,9 @@
     <a th:href="@{/}" class="navbar-brand m-0">Home</a>
     <p th:text="${title}" class="navbar-brand m-0 w-100"></p>
 </div>
-
+<div class="d-flex justify-content-end p-2" >
+    <a th:href="@{'/logout'}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Logout</a>
+</div>
 <div class="container">
     <div class="row">
         <div class="col-xs-6">
