set up environment variables for DB pass and api key

--- a/Happy-Hour/src/main/resources/templates/results.html
+++ b/Happy-Hour/src/main/resources/templates/results.html
@@ -94,7 +94,7 @@
 
 </script>
 <script th:inline="javascript" async="async" defer="defer"
-        src=>
+        src=${MAP_API_KEY}>
 </script>  <!--This script verifies Google API Key, establishes link with registered API products, and initialize Map Script-->
 </body>
 </html>
