--- a/Happy-Hour/src/main/resources/templates/results.html
+++ b/Happy-Hour/src/main/resources/templates/results.html
@@ -42,7 +42,7 @@
         </div>
     </div>
 </div>
-<h3>My Google Maps Demo</h3>
+
 <!--The div element for the map -->
 <div id="map" style="width:1000px; height: 500px; margin-left: auto; margin-right: auto"><!--MAP GOES HERE--></div>
 <script th:inline="javascript">
@@ -89,7 +89,7 @@
 
     geocodeZipAndCenter(searchedZip);
 
-    geocodeAddressesAndMark(addressArray);
+    geocodeAddressesAndMark(addressList);
   }
 
 </script>
