Adjusted Map Styling so Map is not flushed against bottom of page.

--- a/Happy-Hour/src/main/resources/templates/results.html
+++ b/Happy-Hour/src/main/resources/templates/results.html
@@ -44,7 +44,7 @@
 </div>
 
 <!--The div element for the map -->
-<div id="map" style="width:1000px; height: 500px; margin-left: auto; margin-right: auto"><!--MAP GOES HERE--></div>
+<div id="map" style="width:1000px; height: 500px; margin: auto auto 100px;"><!--MAP GOES HERE--></div>
 <script th:inline="javascript">
   var geocoder;
   var map;
