request filtering complete

--- a/Happy-Hour/src/main/resources/templates/owner-registration.html
+++ b/Happy-Hour/src/main/resources/templates/owner-registration.html
@@ -10,7 +10,7 @@
         <h1>Happy Hour Locator</h1>
     </div>
     <div class="navbar-header d-flex justify-content-flex-start text-center mb-4">  <!--This nav bar should be fragmented-->
-        <a th:href="@{/}" class="navbar-brand m-0 px-1 border">Home</a>
+        <a th:href="@{/index}" class="navbar-brand m-0 px-1 border">Home</a>
         <p th:text="${title}" class="navbar-brand m-0 w-100 border"></p>
     </div>
 
