--- a/Happy-Hour/src/main/resources/templates/owner-home.html
+++ b/Happy-Hour/src/main/resources/templates/owner-home.html
@@ -7,7 +7,7 @@
 <body class="container bg" style="font-family: Comic Sans MS, Comic Sans, cursive; font-weight: bold; color: white;">
 
 <div class="navbar-header d-flex justify-content-flex-start text-center mb-4">  <!--This nav bar should be fragmented-->
-    <a th:href="@{/}" class="navbar-brand m-0">Home</a>
+    <a th:href="@{/index}" class="navbar-brand m-0">Home</a>
     <p th:text="${title}" class="navbar-brand m-0 w-100"></p>
 </div>
 <div class="d-flex justify-content-end p-2" >
