fragmented Google Map and added to user-view page

--- a/Happy-Hour/src/main/resources/templates/results.html
+++ b/Happy-Hour/src/main/resources/templates/results.html
@@ -43,54 +43,6 @@
     </div>
 </div>
 
-<!--The div element for the map -->
-<div id="map" style="width:1000px; height: 500px; margin: auto auto 100px;"><!--MAP GOES HERE--></div>
-<script th:inline="javascript">
-  var geocoder;
-  var map;
-
-  /*<![CDATA[*/
-    var addressList = /*[[${addressList}]]*/;
-  /*]]>*/
-
-  function initMap() {
-    geocoder = new google.maps.Geocoder();
-
-    map = new google.maps.Map(document.getElementById('map'), {
-    zoom: 15,
-    mapTypeId: 'roadmap'
-    });
-
-    var bounds = new google.maps.LatLngBounds();
-
-    function geocodeAddressesAndMarkAndCenter(addressList){
-        for (var i = 0; i < addressList.length; i++) {
-            geocoder.geocode( { 'address': addressList[i]}, function(results, status) {
-                if (status == 'OK') {
-                    var marker = new google.maps.Marker({
-                        map: map,
-                        position: results[0].geometry.location
-                    });
-                } else {
-                    alert('Geocode was not successful for the following reason: ' + status);
-                }
-
-                bounds.extend(results[0].geometry.location);
-                map.fitBounds(bounds);
-                if(map.zoom > 15) {
-                    map.setZoom(15);
-                }
-            });
-        }
-    }
-
-    geocodeAddressesAndMarkAndCenter(addressList);
-
-  }
-
-</script>
-<script th:inline="javascript" async="async" defer="defer"
-        src=REDACTED>
-</script>  <!--This script verifies Google API Key, establishes link with registered API products, and initialize Map Script-->
+<div th:replace="fragments :: map"></div>
 </body>
 </html>
