--- a/Happy-Hour/src/main/resources/templates/owner-home.html
+++ b/Happy-Hour/src/main/resources/templates/owner-home.html
@@ -6,14 +6,10 @@
 
 <body class="container bg" style="font-family: Comic Sans MS, Comic Sans, cursive; font-weight: bold; color: white;">
 
-<div class="page-header text-center my-5">    <!--This header should be fragmented-->
-    <h1>Happy Hour Locator</h1>
-</div>
+<div th:replace="fragments :: header"></div>
 
-<div class="navbar-header d-flex justify-content-flex-start text-center mb-4">  <!--This nav bar should be fragmented-->
-    <a th:href="@{/index}" class="navbar-brand m-0 px-1 border">Home</a>
-    <p th:text="${title}" class="navbar-brand m-0 w-100 border"></p>
-</div>
+<div th:replace="fragments :: navbar"></div>
+
 <div class="d-flex justify-content-end p-2" >
     <a th:href="@{'/logout'}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Logout</a>
 </div>
