Added Header/NavBar Fragment into owner-registration.html.

--- a/Happy-Hour/src/main/resources/templates/owner-registration.html
+++ b/Happy-Hour/src/main/resources/templates/owner-registration.html
@@ -6,13 +6,9 @@
 
 <body class="container bg" style="font-family: Comic Sans MS, Comic Sans, cursive; font-weight: bold; color: white;">
 
-    <div class="page-header text-center my-5">    <!--This header should be fragmented-->
-        <h1>Happy Hour Locator</h1>
-    </div>
-    <div class="navbar-header d-flex justify-content-flex-start text-center mb-4">  <!--This nav bar should be fragmented-->
-        <a th:href="@{/index}" class="navbar-brand m-0 px-1 border">Home</a>
-        <p th:text="${title}" class="navbar-brand m-0 w-100 border"></p>
-    </div>
+    <div th:replace="fragments :: header"></div>
+
+    <div th:replace="fragments :: navbar"></div>
 
     <div class="container h-100">
         <div class="d-flex justify-content-center">
