Removed body styling fragment from fragments. Added Body styling to happyhour.css.

--- a/Happy-Hour/src/main/resources/static/css/happyhour.css
+++ b/Happy-Hour/src/main/resources/static/css/happyhour.css
@@ -14,6 +14,11 @@ body,html{
     height: 100%;
 }
 
+body {
+    font-family: Comic Sans MS, Comic Sans, cursive;
+    font-weight: bold; color: white;
+}
+
 .searchbar{
     margin-bottom: auto;
     margin-top: auto;
