Added Body styling to happyhour.css.  Referenced body_text class in html pages.

--- a/Happy-Hour/src/main/resources/static/css/happyhour.css
+++ b/Happy-Hour/src/main/resources/static/css/happyhour.css
@@ -14,7 +14,7 @@ body,html{
     height: 100%;
 }
 
-body {
+.body_text {
     font-family: Comic Sans MS, Comic Sans, cursive;
     font-weight: bold; color: white;
 }
