--- a/Happy-Hour/src/main/resources/templates/owner-login.html
+++ b/Happy-Hour/src/main/resources/templates/owner-login.html
@@ -4,8 +4,7 @@
 
 <title th:text="${title}"></title>
 
-<!--Discuss if we should or want to add this font styling to happyhour.css-->
-<body class="container bg" style="font-family: Comic Sans MS, Comic Sans, cursive; font-weight: bold; color: white;">
+<body class="container bg body_text">
 
     <div th:replace="fragments :: header"></div>
 
