--- a/Happy-Hour/src/main/resources/templates/results.html
+++ b/Happy-Hour/src/main/resources/templates/results.html
@@ -3,43 +3,36 @@
 <head th:replace="fragments :: head">
 </head>
 <title th:text="${title}"></title>
-<body >
-<div class="bg">
-    <div class="container h-100">
-        <div class="d-flex justify-content-center h-100">
-            <div class="container body-content">
-                <div th:replace="fragments :: header"></div>
+<body class="container bg body_text">
 
-                <div th:replace="fragments :: navbar"></div>
+    <div th:replace="fragments :: header"></div>
 
-                <h2 class = "centered">Happy Hours with </h2>
-                <h2 class="centered" th:text="${searchTerm}"></h2>
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>Happy Hours</th>
-                    </tr>
-                    </thead>
-                    <tr>
-                        <th> Name </th>
-                        <th> Address </th>
-                        <th> Times </th>
-                    </tr>
-                    <tbody>
-                    <th:block th:each="happy : ${happyHours}">
-                        <tr>
-                            <td th:text="${happy.name}" ></td>
-                            <td th:text="${happy.address}" ></td>
-                            <td th:text="${happy.startTime}+' - '+${happy.endTime}" ></td>
-                        </tr>
-                    </th:block>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</div>
+    <div th:replace="fragments :: navbar"></div>
 
-<div th:replace="fragments :: map"></div>
+    <h2 class = "centered">Happy Hours with </h2>
+    <h2 class="centered" th:text="${searchTerm}"></h2>
+    <table class="table">
+        <thead>
+        <tr>
+            <th>Happy Hours</th>
+        </tr>
+        </thead>
+        <tr>
+            <th> Name </th>
+            <th> Address </th>
+            <th> Times </th>
+        </tr>
+        <tbody>
+        <th:block th:each="happy : ${happyHours}">
+            <tr>
+                <td th:text="${happy.name}" ></td>
+                <td th:text="${happy.address}" ></td>
+                <td th:text="${happy.startTime}+' - '+${happy.endTime}" ></td>
+            </tr>
+        </th:block>
+        </tbody>
+    </table>
+
+    <div th:replace="fragments :: map"></div>
 </body>
 </html>
