--- a/Happy-Hour/src/main/resources/templates/results.html
+++ b/Happy-Hour/src/main/resources/templates/results.html
@@ -3,36 +3,37 @@
 <head th:replace="fragments :: head">
 </head>
 <title th:text="${title}"></title>
-<body class="container bg body_text">
+<body class="container body_text">
+    <div class="bg">
+        <div th:replace="fragments :: header"></div>
 
-    <div th:replace="fragments :: header"></div>
+        <div th:replace="fragments :: navbar"></div>
 
-    <div th:replace="fragments :: navbar"></div>
-
-    <h2 class = "centered">Happy Hours with </h2>
-    <h2 class="centered" th:text="${searchTerm}"></h2>
-    <table class="table">
-        <thead>
-        <tr>
-            <th>Happy Hours</th>
-        </tr>
-        </thead>
-        <tr>
-            <th> Name </th>
-            <th> Address </th>
-            <th> Times </th>
-        </tr>
-        <tbody>
-        <th:block th:each="happy : ${happyHours}">
+        <h2 class = "centered">Happy Hours with </h2>
+        <h2 class="centered" th:text="${searchTerm}"></h2>
+        <table class="table">
+            <thead>
             <tr>
-                <td th:text="${happy.name}" ></td>
-                <td th:text="${happy.address}" ></td>
-                <td th:text="${happy.startTime}+' - '+${happy.endTime}" ></td>
+                <th>Happy Hours</th>
             </tr>
-        </th:block>
-        </tbody>
-    </table>
+            </thead>
+            <tr>
+                <th> Name </th>
+                <th> Address </th>
+                <th> Times </th>
+            </tr>
+            <tbody>
+            <th:block th:each="happy : ${happyHours}">
+                <tr>
+                    <td th:text="${happy.name}" ></td>
+                    <td th:text="${happy.address}" ></td>
+                    <td th:text="${happy.startTime}+' - '+${happy.endTime}" ></td>
+                </tr>
+            </th:block>
+            </tbody>
+        </table>
 
-    <div th:replace="fragments :: map"></div>
+        <div th:replace="fragments :: map"></div>
+    </div>
 </body>
 </html>
