--- a/Happy-Hour/src/main/resources/templates/results.html
+++ b/Happy-Hour/src/main/resources/templates/results.html
@@ -13,7 +13,7 @@
             <h2 th:text="'Happy Hours with '+${searchTerm}"></h2>
         </div>
 
-        <div class="h-auto mt-5">
+        <div class="h-auto pb-5">
             <table class="table">
                 <thead>
                 <tr>
