Adjusted table bottom padding.

--- a/Happy-Hour/src/main/resources/templates/fragments.html
+++ b/Happy-Hour/src/main/resources/templates/fragments.html
@@ -70,7 +70,7 @@
 
 </script>
     <script th:inline="javascript" async="async" defer="defer"
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC9CJzXEzUvpuomQqTVFL19juX8IaJVWw&callback=initMap">
+            src=REDACTED>
     </script>  <!--This script verifies Google API Key, establishes link with registered API products, and initialize Map Script-->
 </div>
 
