Changed default search text from "Hello World" to "Search Happy Hours Near You"

--- a/Happy-Hour/src/main/resources/templates/index.html
+++ b/Happy-Hour/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
         <div class="d-flex justify-content-center" style="height:45%">
             <form th:action="@{results}" method="post" class="d-flex flex-column">
                 <div class="searchbar">
-                    <input class="search_input" type="text" name="searchTerm" placeholder="Hello World">
+                    <input class="search_input" type="text" name="searchTerm" placeholder="Search Happy Hours Near You">
                     <button class="search_icon" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                 </div>
             </form>
