Centered Page Section Header on Nav Bar.

--- a/Happy-Hour/src/main/resources/templates/fragments.html
+++ b/Happy-Hour/src/main/resources/templates/fragments.html
@@ -16,7 +16,7 @@
     <h1>Happy Hour Locator</h1>
 </div>
 
-<div th:fragment="navbar" class="navbar-header d-flex justify-content-flex-start text-center mb-4">
+<div th:fragment="navbar" class="navbar-header d-flex justify-content-flex-start text-center mb-4 w-100">
     <a th:href="@{/index}" class="navbar-brand m-0 px-1 border">Home</a>
     <p th:text="${title}" class="navbar-brand m-0 w-100 border"></p>
 </div>
