Removed extra ending label tag after username.

--- a/Happy-Hour/src/main/resources/templates/owner-login.html
+++ b/Happy-Hour/src/main/resources/templates/owner-login.html
@@ -14,7 +14,7 @@
         <div class="row d-flex justify-content-center">
             <form method="post">
                 <div class="form-group">
-                    <label>Username</label>
+                    <label>Username
                         <input class="form-control" th:field="${loginFormDTO.username}">
                     </label>
                     <p class="error" th:errors="${loginFormDTO.username}"></p>
