Changed "Hot Happy Hours" to "New Happy Hours".

--- a/Happy-Hour/src/main/resources/templates/index.html
+++ b/Happy-Hour/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th> Hot Happy Hours</th>
+                    <th> New Happy Hours</th>
                 </tr>
                 </thead>
                 <tbody>
