--- a/Happy-Hour/src/main/resources/templates/owner-home.html
+++ b/Happy-Hour/src/main/resources/templates/owner-home.html
@@ -20,42 +20,49 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-6">
-<form method="post">
-    <label>CREATE NEW HAPPY HOUR</label>
-    <div class="form-group">
-        <label>Happy Hour Name
-            <input th:field="${happyHour.name}" class="form-control">
-        </label>
-        <p class="error" th:errors="${happyHour.name}"></p>
-    </div>
-    <div class="form-group">
-        <label>Happy Hour Day of Week
-            <input th:field="${happyHour.dayOfWeek}" class="form-control">
-        </label>
-        <p class="error" th:errors="${happyHour.dayOfWeek}"></p>
-    </div>
-    <div class="form-group">
-        <label>Happy Hour Address
-            <input th:field="${happyHour.address}" class="form-control">
-        </label>
-        <p class="error" th:errors="${happyHour.address}"></p>
-    </div>
-    <div class="form-group">
-        <label>Happy Hour Start Time
-            <input th:field="${happyHour.startTime}" class="form-control">
-        </label>
-        <p class="error" th:errors="${happyHour.startTime}"></p>
-    </div>
-    <div class="form-group">
-        <label>Happy Hour End Time
-            <input th:field="${happyHour.endTime}" class="form-control">
-        </label>
-        <p class="error" th:errors="${happyHour.endTime}"></p>
-    </div>
-    <div class="col text-center">
-        <input type="submit" value="Create" class="btn btn-primary">
-    </div>
-</form>
+            <form method="post">
+                <label>CREATE NEW HAPPY HOUR</label>
+                <div class="form-group">
+                    <label>Happy Hour Name
+                        <input th:field="${happyHour.name}" class="form-control">
+                    </label>
+                    <p class="error" th:errors="${happyHour.name}"></p>
+                </div>
+
+                <div class="form-group">
+                    <label>Happy Hour Address
+                        <input th:field="${happyHour.address}" class="form-control">
+                    </label>
+                    <p class="error" th:errors="${happyHour.address}"></p>
+                </div>
+                <div class="form-group">
+
+                    <label>Happy Hour Day</label><br>
+                    <th:block th:each="day:${dayOfWeek}">
+                        <label th:text="${day}"></label>
+                        <input type="checkbox" th:field="*{timeFormDTO.dayOfWeek}" th:value="${day}" th:id="${day}" />
+                        <div  th:class="hideaway+${day}">
+                            <label>Start Time</label>
+                            <select th:field="*{timeFormDTO.startTime}" >
+                                <option th:each="time:${displayTimes}" th:value="${time.key}" th:text="${time.value}"></option>
+                            </select>
+                        </div>
+                        <div  th:class="hideaway+${day}">
+                            <label>End Time</label>
+                            <select th:field="*{timeFormDTO.endTime}" >
+                                <option th:each="time:${displayTimes}" th:value="${time.key}" th:text="${time.value}"></option>
+                                <option th:value="${2400}" text="12 am"></option>
+                            </select>
+                        </div>
+
+                    </th:block>
+
+
+                </div>
+                <div class="col text-center">
+                    <input type="submit" value="Create" class="btn btn-primary">
+                </div>
+            </form>
         </div>
         <div class="col-xs-12">
             <table class="table">
@@ -69,13 +76,11 @@
                 </tr>
                 </thead>
                 <tbody>
-                    <tr th:each="happyHour : ${happyHours}">
-                        <td th:text="${happyHour.name}"></td>
-                        <td th:text="${happyHour.dayOfWeek}"></td>
-                        <td th:text="${happyHour.startTime}"></td>
-                        <td th:text="${happyHour.endTime}"></td>
-                        <td th:text="${happyHour.address}"></td>
-                    </tr>
+                                    <tr th:each="happyHour : ${happyHours}">
+                                        <td th:text="${happyHour.name}"></td>
+                                        <td th:text="${happyHour.address}"></td>
+                                        <td th:text="${happyHour.getStandardDayTime()}"></td>
+                                    </tr>
                 </tbody>
             </table>
         </div>
