--- a/Happy-Hour/src/main/resources/templates/index.html
+++ b/Happy-Hour/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
+
 <head th:replace="fragments :: head">
 </head>
 <title th:text="${title}"></title>
@@ -7,7 +8,11 @@
 <div class="bg">
     <div class="container h-100" >
         <div class="d-flex justify-content-end p-2" >
-            <a th:href="@{'/owner-login'}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Login</a>
+<!--            <a th:href="@{'/owner-login'}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Login</a>-->
+            <a th:href="@{/owner-login}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Login</a>
+        </div>
+        <div sec:authorize="isAuthenticated()">
+            This content is only shown to authenticated users.
         </div>
         <div class="d-flex justify-content-center" style="height:25%">
             <form th:action="@{results}" method="post" class="d-flex flex-column">
