--- a/Happy-Hour/src/main/resources/templates/owner-login.html
+++ b/Happy-Hour/src/main/resources/templates/owner-login.html
@@ -12,21 +12,41 @@
         <div th:replace="fragments :: navbar"></div>
 
         <div class="row d-flex justify-content-center">
-            <form method="post">
-                <div class="form-group">
-                    <label>Username
-                        <input class="form-control" th:field="${loginFormDTO.username}">
-                    </label>
-                    <p class="error" th:errors="${loginFormDTO.username}"></p>
-                </div>
-                <div class="form-group">
-                    <label>Password
-                        <input class="form-control" th:field="${loginFormDTO.password}" type="password">
-                    </label>
-                    <p class="error" th:errors="${loginFormDTO.password}"></p>
-                </div>
+<!--            <form method="post">-->
+<!--                <div class="form-group">-->
+<!--                    <label>Username-->
+<!--                        <input class="form-control" th:field="${loginFormDTO.username}">-->
+<!--                    </label>-->
+<!--                    <p class="error" th:errors="${loginFormDTO.username}"></p>-->
+<!--                </div>-->
+<!--                <div class="form-group">-->
+<!--                    <label>Password-->
+<!--                        <input class="form-control" th:field="${loginFormDTO.password}" type="password">-->
+<!--                    </label>-->
+<!--                    <p class="error" th:errors="${loginFormDTO.password}"></p>-->
+<!--                </div>-->
 
-                <input type="submit" class="btn btn-primary" value="Log In" />
+<!--                <input type="submit" class="btn btn-primary" value="Log In" />-->
+<!--            </form>-->
+            <h3>Enter user name and password:</h3>
+            <form name='f' th:action="@{/j_spring_security_check}" method='POST'>
+                <table>
+                    <tr>
+                        <td>User:</td>
+                        <td><input type='text' name='username' value=''></td>
+                    </tr>
+                    <tr>
+                        <td>Password:</td>
+                        <td><input type='password' name='password' /></td>
+                    </tr>
+                    <tr>
+                        <td>Remember Me?</td>
+                        <td><input type="checkbox" name="remember-me" /></td>
+                    </tr>
+                    <tr>
+                        <td><input name="submit" type="submit" value="submit" /></td>
+                    </tr>
+                </table>
             </form>
         </div>
         <p class="row d-flex justify-content-center my-2">Don't have an account?<a href="/owner-registration">Register for one.</a></p>
