--- a/Happy-Hour/src/main/resources/templates/owner-home.html
+++ b/Happy-Hour/src/main/resources/templates/owner-home.html
@@ -8,9 +8,9 @@
 
         <div th:replace="fragments :: navbar"></div>
 
-        <div class="d-flex justify-content-end p-2" >
-    <a th:href="@{'/logout'}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Logout</a>
-</div>
+<!--        <div class="d-flex justify-content-end p-2" >-->
+<!--&lt;!&ndash;    <a th:href="@{'/logout'}" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Logout</a>&ndash;&gt;-->
+<!--</div>-->
 <div class="container">
     <div class="row">
         <div class="col-xs-6">
@@ -64,9 +64,7 @@
                 <tr>
                     <th scope="col">Business</th>
                     <th scope="col">Days of Week</th>
-                    <th scope="col">Start Time</th>
-                    <th scope="col">End Time</th>
-                    <th scope="col">Address</th>
+                    <th scope="col">Time</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -79,7 +77,7 @@
             </table>
         </div>
     </div>
-</div></div>
+</div>
 
 </body>
 </html>
